<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.data4help.d4h_thirdparty.activity.HomeActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/group_request_param"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="310dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/age"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/minAge"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="6"
                android:hint="@string/min_age"
                android:inputType="number | numberDecimal"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/maxAge"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="6"
                android:hint="@string/max_age"
                android:inputType="numberDecimal | number"
                tools:ignore="Autofill" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="310dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/weight"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/minWeight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="6"
                android:hint="@string/min_weight"
                android:inputType="number | numberDecimal"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/maxWeight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="6"
                android:hint="@string/max_weight"
                android:inputType="numberDecimal | number"
                tools:ignore="Autofill" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="310dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/height"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/minHeight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="6"
                android:hint="@string/min_height"
                android:inputType="number | numberDecimal"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/maxHeight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="6"
                android:hint="@string/max_height"
                android:inputType="numberDecimal | number"
                tools:ignore="Autofill" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="310dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/text1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/sex"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/maleButton"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/femaleButton"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/female" />

        </LinearLayout>

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/geoposition"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/street"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/street"
            android:layout_width="102dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/street"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toTopOf="@+id/postalCode"
            app:layout_constraintEnd_toStartOf="@+id/number"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/postalCode"
            android:layout_width="102dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/cap"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toTopOf="@+id/saveGroupRequestButton"
            app:layout_constraintEnd_toStartOf="@+id/region"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/region"
            android:layout_width="102dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/region"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toTopOf="@+id/saveGroupRequestButton"
            app:layout_constraintEnd_toStartOf="@+id/country"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/country"
            android:layout_width="102dp"
            android:layout_height="45dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/country"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toTopOf="@+id/saveGroupRequestButton"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/number"
            android:layout_width="102dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/number"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/region"
            app:layout_constraintEnd_toStartOf="@+id/city"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/city"
            android:layout_width="102dp"
            android:layout_height="45dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toTopOf="@+id/country"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/saveGroupRequestButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="7dp"
            android:text="@string/save_and_send"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/errorGroupRequest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/errorGroupRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>