<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="com.data4help.d4h_thirdparty.activity.ShowDataActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="294dp"
        android:src="@drawable/picture3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:text="Group-1"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/todayButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:background="@drawable/day_shape"
            android:textColor="@color/colorAccent"
            android:text="@string/today"/>

        <Button
            android:id="@+id/yesterdayButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:background="@drawable/day_shape"
            android:text="@string/yesterday"/>

        <Button
            android:id="@+id/twoDaysAgoButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:background="@drawable/day_shape"
            android:text="@string/two_days_ago"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/dataPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/threeDaysButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:background="@drawable/day_shape"
            android:text="@string/three_days_ago"/>

        <Button
            android:id="@+id/fourDaysButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:background="@drawable/day_shape"
            android:text="@string/four_days_ago"/>

        <Button
            android:id="@+id/fiveDaysButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:background="@drawable/day_shape"
            android:text="@string/five_days_ago"/>

        <Button
            android:id="@+id/sixDaysButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:background="@drawable/day_shape"
            android:text="@string/six_days_ago"/>
    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/dataPage"
        android:layout_marginTop="250dp"
        android:layout_width="match_parent"
        android:layout_height="470dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>